--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -1,5 +1,3 @@
-
-
 .online {
     color: green;
 }
@@ -7,3 +5,31 @@
 .offline {
     color: red;
 }
+
+.card{
+    border: 2px solid rgba(0,0,0,1);
+    border-radius: 5px;
+    width: 90px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.avatar{
+    width: 50px;
+    padding: 10px;
+}
+
+.title{
+    font-family: 'Times New Roman', Times, serif;
+    color: rgba(0,0,0,1);
+    font-size: 25px;
+    font-weight: 500;
+    margin: 0;
+    padding-top: 10px;
+}
+
+
+
+
+
